Add unit tests for Product class

--- a/Inventory Management System.Tests/Inventory Management System.Tests.csproj
+++ b/Inventory Management System.Tests/Inventory Management System.Tests.csproj
@@ -18,6 +18,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Inventory-Management-System\Inventory Management System.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
