--- a/Inventory-Management-System-MongoDb/Inventory Management System.MongoDb.csproj
+++ b/Inventory-Management-System-MongoDb/Inventory Management System.MongoDb.csproj
@@ -9,11 +9,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.8" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.8">
-			<PrivateAssets>all</PrivateAssets>
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
+	  <PackageReference Include="MongoDB.Driver" Version="2.28.0" />
 	</ItemGroup>
 
 </Project>
