--- a/Inventory-Management-System-with-DB/Inventory Management System.with.DB.csproj
+++ b/Inventory-Management-System-with-DB/Inventory Management System.with.DB.csproj
@@ -14,6 +14,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="MongoDB.Driver" Version="2.29.0" />
   </ItemGroup>
 
 </Project>
